mType/tests/testFiles/import/pass/reexportChain/ModC.mt
import { ChainTip } from "./ModD.mt";
