mType/tests/testFiles/import/error/importMissingExtension.mt
// Test: No .mt extension
@Script
import { SomeClass } from "./modules/SomeModule"

var obj = SomeClass();
